hphp/hack/test/typecheck/array/disallow_keyset_with_non_arraykey_keys.php.exp
File "disallow_keyset_with_non_arraykey_keys.php", line 6, characters 8-27:
Invalid element type for this keyset (Typing[4110])
  File "disallow_keyset_with_non_arraykey_keys.php", line 6, characters 15-17:
  Expected `arraykey` because only array keys can be used as elements of `keyset` or `Set`
  File "disallow_keyset_with_non_arraykey_keys.php", line 6, characters 15-17:
  But got `float`
File "disallow_keyset_with_non_arraykey_keys.php", line 6, characters 8-27:
Invalid element type for this keyset (Typing[4110])
  File "disallow_keyset_with_non_arraykey_keys.php", line 6, characters 20-26:
  Expected `arraykey` because only array keys can be used as elements of `keyset` or `Set`
  File "disallow_keyset_with_non_arraykey_keys.php", line 6, characters 24-24:
  But got `C`
